--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,7 @@ body {
   overflow: hidden;
   height: 24vh;
   background-color: #080609;
-  padding: 2em;
+ 
 }
 
 .contact .email {
@@ -447,7 +447,9 @@ body {
   height: 3vw;
 }
 
-@media (min-width: 1201px) and (max-width: 1980px) {
+
+
+@media (min-width: 1501px) and (max-width: 1980px) {
   .container-header .logo-header {
     font-size: 35px;
   }
@@ -634,7 +636,197 @@ body {
   gap: 7em;
 }
 }
+@media (min-width: 1201px) and (max-width: 1500px) {
+  .container-header .logo-header {
+    font-size: 35px;
+  }
+  .navbar-nav .nav-item {
+    font-size: 4px;
+  }
 
+  .navbar-expand-lg .navbar-nav {
+    flex-direction: row;
+    margin-right: 10em;
+  }
+  .container02 {
+    max-width: 100%;
+    height: 102vh;
+  }
+  .text-about {
+    font-size: 1.5em;
+    margin-left: 2.4em;
+    margin-top: 3em;
+  }
+  .subtext-about {
+    font-size: 1.1em;
+    width: 47vw;
+    margin-left: 3em;
+    margin-top: 2em;
+    line-height: 2.2em;
+  }
+  .title-sobre {
+    /* margin-top: -1em; */
+    font-size: 2.5em;
+    margin-left: -1em;
+  }
+  .container03 {
+    height: 120vh;
+  }
+  .title-skills {
+    font-size: 2.5em;
+    font-weight: bold;
+    margin-top: -1em;
+    /* margin-left: -5em; */
+  }
+  
+  .container04 {
+    min-height: 93vh;
+  }
+  .card-services .card {
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 31%;
+    height: 34vh;
+  }
+  .text-services {
+    font-size: 2.5em;
+    /* margin-top: 1em; */
+    margin-left: -1em
+  }
+  .card-services {
+    display: flex;
+    margin-right: auto;
+    justify-content: center;
+    margin-top: -8em;
+  }
+  .card-services .card-title {
+    font-size: 1.2em;
+  }
+  .card-services .text-service-card {
+    font-size: 0.99em;
+
+    margin-top: 0.1em;
+}
+
+  .subtitle {
+    font-size: 20px;
+  }
+  .container05 {
+    height: 80vh;
+  }
+  .container5 {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+
+    width: 70vw;
+    /* height: 40vh; */
+    justify-content: space-around;
+    align-items: flex-start;
+    align-content: space-between;
+    flex-wrap: nowrap;
+    flex-direction: row;
+}
+
+  .card-2 {
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 22vw;
+    height: 32vh;
+  }
+  .title-container-project {
+    font-size: 2.5em;
+  }
+  .card-2 .title-project {
+    font-size: 1.4em;
+  }
+  .card-2 .text-project {
+    font-size: 18px;
+  }
+
+  .email {
+    margin-left: 13em;
+  }
+  .local {
+    font-size: 10px;
+    margin-left: -1em;
+  }
+  .section-container .title-job {
+  
+      font-size: 1.2em;
+      margin-left: -10em;
+      width: -7vw;
+      margin-top: -1em;
+  }
+  
+  .section-container {
+    margin-top: -3em;
+    margin-left: 5em;
+  }
+  .container01 {
+    height: 85vh;
+    padding: 24em;
+}
+
+.social-media .direitos {
+  font-size: 17px;
+  display: flex;
+  justify-items: start;
+}
+.btn {
+  margin-left: 1em;
+  padding: 5px;
+  margin-top: 2em;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link{
+  font-size: 5em;
+}
+/* 
+.navbar-expand-lg{
+  padding: 2em;
+} */
+
+.container-header{
+  height: 12vh;
+}
+
+.accordion-button{
+  font-size: 39px;
+  color: #040404;
+}
+
+.card-skill img {
+  height: 10vh;
+  width: 6vw;
+}
+
+.text-skill{
+  font-size: 1.8rem;
+  margin-top: 0.3em;
+}
+
+.citação{
+  font-size: 2em;
+  margin-top: 6em;
+}
+.backtotop {
+  position: fixed;
+  left: 86%;
+  top: 90%;
+}
+.container02 img {
+  position: absolute;
+  top: 142%;
+  left: 58%;
+  width: 42%;
+
+}
+.container-card-skill{
+  gap: 7em;
+  margin-top: 7em;
+}
+}
 @media (min-width: 1025px) and (max-width: 1200px) {
   .container-header .logo-header {
     font-size: 1.9em;
